Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- smart EQ: removed vehicle specific GPS on/off at parking -> moved to cellular
- Vehicle notifications: grid log (history records `*-LOG-Grid`) V2 additions:
    pos_odometer
- Server V3: 
  added configurable connect stabilization & random jitter (server.v3 conn.stable_wait / conn.jitter.max) before MQTT connect to reduce reconnect storms.
- Cellular: 
  safeguarded CGATT attach/detach (only with mux/PPP), added NetLoss retry limit & optional power‑cycle recovery to prevent loops.
- esp32wifi:
  The OVMS will switch from Wifi APClient to Wifi Client mode after the timeout reached and a client is not connected. "APClient" will be restored upon reboot/network restart.
  new config, settings at Wifi:
    [network] wifi.ap2client.timeout   -- Wifi Mode APClient to client timeout in minutes (default 30 minutes)
    [network] wifi.ap2client.enable    -- Wifi Mode APClient to client enable/disable (default disable)
    [network] wifi.ap2client.notify    -- Notify when Wifi APClient to Wifi Client mode switched (default disable)
- Vehicle framework: signal generator operation state changes
  New events:
    vehicle.gen.start         -- Power delivery started
    vehicle.gen.stop          -- Power delivery stopped
    vehicle.gen.pilot.on      -- Pilot signal present
    vehicle.gen.pilot.off     -- Pilot signal gone
    vehicle.gen.timermode.on  -- Generator timer has been enabled
    vehicle.gen.timermode.off -- Generator timer has been disabled
- Cellular: GPS auto pause on parking re-activate option added (update position).
  New config:
    [modem] gps.reactivate    -- park time in minutes for auto re-activate for (default 5 minutes) GPS lock (gps.reactlock), 0 = disabled (default)
    [modem] gps.reactlock     -- by default, GPS lock for 5 minutes until automatic shutdown during parking time

2024-03-23 MB   3.3.005  OTA release